Header fix on mobile

--- a/Lab5/styles.css
+++ b/Lab5/styles.css
@@ -10,7 +10,6 @@ body {
     background-image: url(bg.png);
     /* Background Designed by azerbaijan_stockers / Freepik
        http://www.freepik.com */
-    border: 0.5em solid #000;
     font-size: 18px;
 }
 
@@ -23,6 +22,7 @@ body {
         width: 80%;
     }
     header h1 {
+        font-size: 3.5em;
         letter-spacing: 1.1vw;
     }
 }
@@ -52,7 +52,7 @@ header h1 {
     color: #009788;
     flex-basis: 90%;
     font-family: 'Baskerville', 'Times New Roman', serif;
-    font-size: 3.5em;
+    font-size: 3em;
     padding: 0 0.25em;
     text-align: center;
 }
